<resources>
    <string name="app_name">SpellViewer</string>
    <string name="home">Charakterauswahl</string>
    <string name="spellList">Zauberliste</string>
    <string name="openRules">Zur Heldenanleitung</string>
    <string name="newestVersion">Neuste Version</string>
    <string name="ok">OK</string>
    <string name="cancel">Abbrechen</string>
    <string name="confirm">Bestätigen</string>
    <string name="gallery">Gallerie</string>
    <string name="resetSpell">Zauber zurücksetzen</string>
    <string name="resetSpellDialogText">Damit die Standardzauber wiederhergestellt. Selbst erstellte Zauber bleiben erhalten. Fortfahren?</string>
    <string name="characterExists">Charakter existiert bereits!</string>
    <string name="noNameEntered">Charaktername darf nicht leer sein!</string>
    <string name="characterName">Charaktername</string>
    <string name="chooseCharacter">Wähle einen Charakter</string>
    <string name="createCharacter">Charakter erstellen</string>
    <string name="male">Männlich</string>
    <string name="female">Weiblich</string>
    <string name="other">Andere</string>
    <string name="addSpellButton">Zauber zur Liste hinzufügen</string>
    <string name="allSpellsList">Liste aller verfügbaren Zauber</string>
    <string name="delete">Löschen</string>
    <string name="modify">Bearbeiten</string>
    <string name="confirmSpellsButton">Zauber hinzufügen</string>
    <string name="spellExistsToast">Zauber mit diesem Namen existiert bereits!</string>
    <string name="newSpell">Neuer Zauber</string>
    <string name="modSpell">&#160;bearbeiten</string>
    <string name="createSpellsButton">Neuen Zauber erstellen</string>
    <string name="standardAction">Standardaktion</string>
    <string name="spellName">Zaubername</string>
    <string name="spellCat">Zauberschule</string>
    <string name="fullAction">Volle Aktion</string>
    <string name="freeAction">Freie Aktion</string>
    <string name="bonusAction">Bonusaktion</string>
    <string name="rank">Rang</string>
    <string name="dc">SK</string>
    <string name="mana">Mana</string>
    <string name="actionType">Aktionstyp</string>
    <string name="range">Reichweite</string>
    <string name="duration">Dauer</string>
    <string name="description">Beschreibung</string>
    <string name="allRanks">Alle Ränge</string>
    <string-array name="ranksDropDown">
        <item>Alle Ränge</item>
        <item>Rang 1</item>
        <item>Rang 2</item>
        <item>Rang 3</item>
    </string-array>
    <string-array name="ranksDropDownNumber">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="allCats">Alle Zauberschulen</string>
    <string-array name="spellCatDropDown">
        <item>Alle Zauberschulen</item>
        <item>Verzauberung</item>
        <item>Beschwörung</item>
        <item>Zerstörung</item>
        <item>Veränderung</item>
    </string-array>
    <string-array name="actionDropDown">
        <item>Standardaktion</item>
        <item>Bonusaktion</item>
        <item>Freie Aktion</item>
        <item>Volle Aktion</item>
    </string-array>
    <string name="enchantment">Verzauberung</string>
    <string name="summoning">Beschwörung</string>
    <string name="destruction">Zerstörung</string>
    <string name="alteration">Veränderung</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="panic_name">Panik</string>
    <string name="panic_description">ZW löst den Zustand Panik in bis zu 3 Lebewesen in bis zu 15 m Reichweite aus. Panische
Lebewesen ergreifen Sofort die Flucht. Betroffene werfen zu Beginn jeder ihrer Runden
auf Willenskraft gegen den PW+2 des Zaubers. Nach jeder gescheiterten Probe wird sie
um 2 leichter.</string>
    <string name="panic_range">15 m</string>
    <string name="panic_duration">bis Befreiung</string>
    <string name="panic_dc">Willenskraft-2</string>
    <string name="panic_mana">2/Ziel</string>
    <string name="calmAnimal_name">Tiere besänfitigen</string>
    <string name="calmAnimal_description">ZW kann ein Tier in 20 m Entfernung beruhigen, dieses ist nicht mehr aggressiv.</string>
    <string name="calmAnimal_range">20 m</string>
    <string name="calmAnimal_duration">1 Stunde</string>
    <string name="calmAnimal_dc">SL</string>
    <string name="calmAnimal_mana">2</string>
    <string name="darkVision_name">Dunkelsicht</string>
    <string name="darkVision_description">ZW kann im Dunkeln sehen. Alle Mali durch Dunkelheit werden um 4(+1xSteigerung)
verringert.</string>
    <string name="darkVision_range">Selbst</string>
    <string name="darkVision_duration">Manakosten h</string>
    <string name="darkVision_dc">8</string>
    <string name="darkVision_mana">1/h</string>
    <string name="slowFall_name">Langsamer Fall</string>
    <string name="slowFall_description">Langsamer Fall reduziert die Fallgeschwindigkeit auf maximal 2 m/s. Beim Aufprall wird
kein Schaden erlitten.</string>
    <string name="slowFall_range">Selbst</string>
    <string name="slowFall_duration">1 min</string>
    <string name="slowFall_dc">8</string>
    <string name="slowFall_mana">2</string>
    <string name="animalSpeech_name">Tiersprache</string>
    <string name="animalSpeech_description">ZW und alle Verbündeten in 10 m Entfernung können mit einer bestimmten Tierartspre-
chen (SK: 7) oder mit allen Tieren (SK: 9).</string>
    <string name="animalSpeech_range">10 m</string>
    <string name="animalSpeech_duration">30 min</string>
    <string name="animalSpeech_dc">7/9</string>
    <string name="animalSpeech_mana">1</string>
    <string name="speakWithDead_name">Totensprache</string>
    <string name="speakWithDead_description">ZW kann mit einer Leiche sprechen die noch immer einen Mund hat und nicht älter als
ein halbes Jahr ist und auf die dieser Zauber nicht in den letzten 10 Tagen angewandt
wurde. Die Leiche weiß nur was sie im Leben wusste und kann 5 Fragen beantworten.
Die Antworten sind in der Regeln nur sehr kurz und oft etwas kryptisch.</string>
    <string name="speakWithDead_range">10 m</string>
    <string name="speakWithDead_duration">30 min</string>
    <string name="speakWithDead_dc">8</string>
    <string name="speakWithDead_mana">1</string>
    <string name="confusion_name">Verwirrung</string>
    <string name="confusion_description">ZW löst eine Verwirrung in einem Lebewesen in 20 m Reichweite aus. Das Opfer wirft
zu Beginn jeder seiner Runden auf Willenskraft gegen den PW+2 des Zaubers. Gelingt
dies nicht greifen sie zufällige Lebewesen in der Umgebung an. Nach jeder gescheiterten
Probe wird sie um 2 leichter.</string>
    <string name="confusion_range">20 m</string>
    <string name="confusion_duration">bis Befreiung</string>
    <string name="confusion_dc">Willenskraft-2</string>
    <string name="confusion_mana">3</string>
    <string name="boilBlood_name">Blut kochen</string>
    <string name="boilBlood_description">ZW lässt das Blut eines Ziels kochen. Richtet immer wenn das Ziel an der Reihe ist
Wil(+1W4 pro Steigerung) Magieschaden an.</string>
    <string name="boilBlood_range">20 m</string>
    <string name="boilBlood_duration">Beliebig</string>
    <string name="boilBlood_dc">Willenskraft</string>
    <string name="boilBlood_mana">2/Runde</string>
    <string name="veiledView_name">Sicht verhüllen</string>
    <string name="veiledView_description">ZW legt einen Schatten über das Ziel. Das Ziel hat eine schlechte Sicht (Bei einer Steige-
rung: ist fast blind, bei zwei Steigerungen ist blind). Das Ziel bekommt -2(-1xSteigerung)
auf die RK. Ab einer Steigerung kann das Ziel keine Fernkampfangriffe mehr durchführen.</string>
    <string name="veiledView_range">30 m</string>
    <string name="veiledView_duration">5 Runden</string>
    <string name="veiledView_dc">Reagieren</string>
    <string name="veiledView_mana">2</string>
    <string name="sleep_name">Einschläfern</string>
    <string name="sleep_description">ZW versetzt ein Lebewesen in natürlichen Schlaf.</string>
    <string name="sleep_range">20</string>
    <string name="sleep_duration">bis geweckt</string>
    <string name="sleep_dc">Willenskraft</string>
    <string name="sleep_mana">2</string>
    <string name="waterBreathing_name">Wasseratmung</string>
    <string name="waterBreathing_description">ZW kann unter Wasser atmen.</string>
    <string name="waterBreathing_range">Selbst</string>
    <string name="waterBreathing_duration">(20+2*Lvl) min</string>
    <string name="waterBreathing_dc">9</string>
    <string name="waterBreathing_mana">3</string>
    <string name="farsight_name">Weitsicht</string>
    <string name="farsight_description">ZW kann Details in doppelter Entfernung erkennen. Distanzmali werden halbiert.</string>
    <string name="farsight_range">Selbst</string>
    <string name="farsight_duration">(10+Lvl) min</string>
    <string name="farsight_dc">9</string>
    <string name="farsight_mana">3</string>
    <string name="befriend_name">Befreunden</string>
    <string name="befriend_description">Ein Lebewesen ist für 5 min(+2xSteigerung) der beste Freund des ZW.</string>
    <string name="befriend_range">5 m</string>
    <string name="befriend_duration">(5+2*Steigerung) min</string>
    <string name="befriend_dc">Willenskraft</string>
    <string name="befriend_mana">3</string>
    <string name="invisibility_name">Unsichtbarkeit</string>
    <string name="invisibility_description">Der Zauberwirker kann sich Selbst unsichtbar machen.</string>
    <string name="invisibility_range">Selbst</string>
    <string name="invisibility_duration">10 min</string>
    <string name="invisibility_dc">10</string>
    <string name="invisibility_mana">5</string>
    <string name="disease_name">Krankheit</string>
    <string name="disease_description">Ein Ziel in 10 m Entfernung wirft eine Ausdauerprobe gegen den PW des Zaubers. Bei
Misserfolg erkrankt das Ziel für eine Woche. Das Ziel erhält einen Malus von 1W4 auf
Kon und verliert 3W6 maximale Lebenspunkte.</string>
    <string name="disease_range">10 m</string>
    <string name="disease_duration">1 Woche</string>
    <string name="disease_dc">Ausdauer</string>
    <string name="disease_mana">4</string>
    <string name="bloodlust_name">Blutrausch</string>
    <string name="bloodlust_description">Versetzt ein Lebewesen in Berührenreichweite in Blutrausch, sodass dieses 4(+4xStei-
gerung) mehr Schaden verursacht und erhält. Dieser Effekt wird um den gleichen Wert
erhöht sobald der vom Blutrausch betroffene einen Gegner tötet. Der Zauber dauert bis
zu 2 Runden + 1 Runde pro Spielerlevel an, er kann aber auch früher vom Zauberwirker
beendet werden.</string>
    <string name="bloodlust_range">Berühren</string>
    <string name="bloodlust_duration">(2+Lvl) Runden</string>
    <string name="bloodlust_dc">9</string>
    <string name="bloodlust_mana">2</string>
    <string name="curse_name">Fluch</string>
    <string name="curse_description">ZW braucht etwas vom Opfer (z.B. Haar). Alle Proben des Opfers sind für einen Tag
um 4(+4xSteigerung) erschwert und das Opfer erhält einen Malus von 3(+3xSteigerung)
auf alle Angriffswürfe.</string>
    <string name="curse_range">-</string>
    <string name="curse_duration">1 Tag</string>
    <string name="curse_dc">Willenskraft-2</string>
    <string name="curse_mana">5</string>
    <string name="bloodRitual_name">Blutritual</string>
    <string name="bloodRitual_description">ZW kann mit Blut eines frisch getöteten Lebewesens ein Ritual durchführen (mind 1 l
Blut). ZW erhält +2(+2xSteigerung) auf ein beliebiges Attribut für 3 Tage. Bei erneuter
Durchführung des Rituals geht der alte Bonus verloren.</string>
    <string name="bloodRitual_range">Selbst</string>
    <string name="bloodRitual_duration">3 Tage</string>
    <string name="bloodRitual_dc">10</string>
    <string name="bloodRitual_mana">4</string>
    <string name="lightball_name">Lichtkugel</string>
</resources>