<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:icon="@mipmap/ic_launcher_round"
        android:title="@string/home"
        android:onClick="goToMain"/>

    <item
        android:id="@+id/spellList"
        android:icon="@mipmap/ic_launcher_round"
        android:title="@string/spellList"
        android:onClick="openSpellList"/>

    <item
        android:id="@+id/heldenanleitung"
        android:icon="@drawable/baseline_arrow_circle_down_24"
        android:title="@string/openRules"
        android:onClick="openRules"/>
    <item
        android:id="@+id/newestVersion"
        android:icon="@drawable/baseline_arrow_circle_down_24"
        android:title="@string/newestVersion"
        android:onClick="linkAPK"/>

</menu>