<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.example.spellviewer.SelectSpellListActivity"
    android:orientation="vertical">
    <include layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="4pt">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:id="@+id/textInputLayoutLeft"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:gravity="start"
            android:layout_weight="1">

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextViewLeft"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:inputType="none"
                android:textColor="@color/text_light"
                android:background="@color/background_light"
                android:text="@string/allRanks" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:id="@+id/textInputLayoutRight"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:gravity="end"
            android:layout_weight="1">

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextViewRight"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:inputType="none"
                android:textColor="@color/text_light"
                android:background="@color/background_light"
                android:gravity="center_vertical"
                android:text="@string/allCats" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <ExpandableListView
        android:id="@+id/expandableListView"
        android:groupIndicator="@null"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingTop="10pt"
        android:divider="#A4C739"
        android:dividerHeight="1.0dp"
        android:childDivider="#A4C739"
        android:layout_weight="1"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:textColor="#FF000000"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/create_spell_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/small_white_plus"
            android:text="@string/createSpellsButton"
            android:onClick="createSpell"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/white_check"
            android:text="@string/confirmSpellsButton"
            android:onClick="confirmSpells"
            android:layout_weight="1"/>
    </LinearLayout>

</LinearLayout>