<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">
    <include layout="@layout/toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1">
        <TableRow

            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="5dip"
            android:paddingBottom="5dip">

        <!-- first element of the row-->
            <TextView
                android:id="@+id/textViewName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dip"
                android:paddingEnd="10dp"
                android:textColor="@color/text"
                android:textSize="16sp"
                android:layout_gravity="center_vertical"
                android:text="@string/spellName"/>

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="11dp"
                android:layout_marginEnd="11dp"
                android:inputType="text"
                android:text=""
                android:textColor="@color/text"
                android:textSize="16sp"
                android:layout_gravity="center_vertical"
                android:padding="5dp"/>
        </TableRow>
        <TableRow

            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="5dip"
            android:paddingBottom="5dip">

            <!-- first element of the row-->
            <TextView
                android:id="@+id/textViewSpellCat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dip"
                android:paddingEnd="10dp"
                android:textColor="@color/text"
                android:textSize="16sp"
                android:layout_gravity="center_vertical"
                android:text="@string/spellCat"/>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:id="@+id/textInputLayoutSpellCat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="start">

                <AutoCompleteTextView
                    android:id="@+id/autoCompleteTextViewSpellCat"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="none"
                    android:textColor="@color/text"
                    android:textSize="16sp"
                    android:gravity="start"
                    android:background="@color/background"
                    android:text="@string/enchantment" />
            </com.google.android.material.textfield.TextInputLayout>


        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="5dip"
            android:paddingBottom="5dip">

            <!-- first element of the row-->
            <TextView
                android:id="@+id/textViewRank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dip"
                android:paddingEnd="10dp"
                android:textColor="@color/text"
                android:textSize="16sp"
                android:layout_gravity="center_vertical"
                android:text="@string/rank"/>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:id="@+id/textInputLayoutRank"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="start">

                <AutoCompleteTextView
                    android:id="@+id/autoCompleteTextViewRank"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="none"
                    android:textColor="@color/text"
                    android:gravity="start"
                    android:textSize="16sp"
                    android:background="@color/background"
                    android:text="1" />
            </com.google.android.material.textfield.TextInputLayout>
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="5dip"
            android:paddingBottom="5dip">

            <!-- first element of the row-->
            <TextView
                android:id="@+id/textViewMana"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dip"
                android:paddingEnd="10dp"
                android:textColor="@color/text"
                android:textSize="16sp"
                android:layout_gravity="center_vertical"
                android:text="@string/mana"/>

            <EditText
                android:id="@+id/editTextMana"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="11dp"
                android:layout_marginEnd="11dp"
                android:inputType="text"
                android:text=""
                android:textSize="16sp"
                android:textColor="@color/text"
                android:layout_gravity="center_vertical"
                android:padding="5dp"/>
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="5dip"
            android:paddingBottom="5dip">

            <!-- first element of the row-->
            <TextView
                android:id="@+id/textViewDC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dip"
                android:paddingEnd="10dp"
                android:textColor="@color/text"
                android:textSize="16sp"
                android:layout_gravity="center_vertical"
                android:text="@string/dc"/>

            <EditText
                android:id="@+id/editTextDC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="11dp"
                android:layout_marginEnd="11dp"
                android:inputType="text"
                android:text=""
                android:textSize="16sp"
                android:textColor="@color/text"
                android:layout_gravity="center_vertical"
                android:padding="5dp"/>
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="5dip"
            android:paddingBottom="5dip">

            <!-- first element of the row-->
            <TextView
                android:id="@+id/textViewAction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dip"
                android:paddingEnd="10dp"
                android:textColor="@color/text"
                android:textSize="16sp"
                android:layout_gravity="center_vertical"
                android:text="@string/actionType"/>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:id="@+id/textInputLayoutAction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="start">

                <AutoCompleteTextView
                    android:id="@+id/autoCompleteTextViewAction"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="none"
                    android:textColor="@color/text"
                    android:gravity="start"
                    android:textSize="16sp"
                    android:background="@color/background"
                    android:text="@string/standardAction" />
            </com.google.android.material.textfield.TextInputLayout>
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="5dip"
            android:paddingBottom="5dip">

            <!-- first element of the row-->
            <TextView
                android:id="@+id/textViewRange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dip"
                android:paddingEnd="10dp"
                android:textColor="@color/text"
                android:textSize="16sp"
                android:layout_gravity="center_vertical"
                android:text="@string/range"/>

            <EditText
                android:id="@+id/editTextRange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="11dp"
                android:layout_marginEnd="11dp"
                android:inputType="text"
                android:text=""
                android:textSize="16sp"
                android:textColor="@color/text"
                android:layout_gravity="center_vertical"
                android:padding="5dp"/>
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="5dip"
            android:paddingBottom="5dip">

            <!-- first element of the row-->
            <TextView
                android:id="@+id/textViewDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dip"
                android:paddingEnd="10dp"
                android:textColor="@color/text"
                android:textSize="16sp"
                android:layout_gravity="center_vertical"
                android:text="@string/duration"/>

            <EditText
                android:id="@+id/editTextDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="11dp"
                android:layout_marginEnd="11dp"
                android:inputType="text"
                android:text=""
                android:textSize="16sp"
                android:textColor="@color/text"
                android:layout_gravity="center_vertical"
                android:padding="5dp"/>
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="5dip"
            android:paddingBottom="5dip">

            <!-- first element of the row-->
            <TextView
                android:id="@+id/textViewDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dip"
                android:paddingEnd="10dp"
                android:textColor="@color/text"
                android:textSize="16sp"
                android:layout_gravity="center_vertical"
                android:text="@string/description"/>

            <EditText
                android:id="@+id/editTextDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="11dp"
                android:layout_marginEnd="11dp"
                android:layout_gravity="center_vertical"
                android:gravity="top|start"
                android:inputType="textMultiLine"
                android:lines="5"
                android:minLines="5"
                android:padding="5dip"
                android:scrollbars="vertical"
                android:text=""
                android:textColor="@color/text"
                android:textSize="16sp" />
        </TableRow>

    </TableLayout>
    </ScrollView>
    <Button
        android:id="@+id/confirm_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:drawableTop="@drawable/white_check"
        android:text="@string/confirm"
        android:onClick="confirmSpell"/>

</LinearLayout>